@@ -89,8 +89,8 @@ namespace Flags {
 						    "Team flag:  If it's yours, prevent other teams from taking it.  If it's not take it to your base to capture it!" );
     Velocity                = new FlagType( "High Speed", "V", FlagUnstable, NormalShot, FlagGood, NoTeam,
 						    "High Speed (+V):  Tank moves faster.  Outrun bad guys." );
-    QuickTurn               = new FlagType( "Quick Turn", "A", FlagUnstable, NormalShot, FlagGood, NoTeam,
-						    "Angular velocity (+A):  Tank turns faster.  Good for dodging." );
+    QuickTurn               = new FlagType( "Quick Turn", "QT", FlagUnstable, NormalShot, FlagGood, NoTeam,
+						    "Angular velocity (+QT):  Tank turns faster.  Good for dodging." );
     OscillationOverthruster = new FlagType( "Oscillation Overthruster", "OO", FlagUnstable, NormalShot, FlagGood, NoTeam,
 						    "Oscillation Overthruster (+OO):  Can drive through buildings.  Can't backup or shoot while inside." );
     RapidFire               = new FlagType( "Rapid Fire", "F", FlagUnstable, SpecialShot, FlagGood, NoTeam,
